Update HTML Task Practice - 1.html

--- a/SPRINT I/HTML/HTML Task Practice - 1.html
+++ b/SPRINT I/HTML/HTML Task Practice - 1.html
@@ -70,7 +70,7 @@
 
 </center>
 
-
+ <h2>Ex-6 : Create the below website with appropriate tags</h2>
 <center>
 <h1>Welcome To Fabulous Retail Shop</h1>
 <p>Your one-stop destination for trendy fashion and accessories!</p>
